--- a/UniversitySport/app/build.gradle
+++ b/UniversitySport/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
+    compile files('src/libs/GDTUnionSDK.4.15.559.min.jar')
 }
 
 def releaseTime() {
