--- a/UniversitySport/app/src/main/AndroidManifest.xml
+++ b/UniversitySport/app/src/main/AndroidManifest.xml
@@ -167,6 +167,11 @@
 
         <service android:name=".ui.activity.LocationService"></service>
 
+        <service android:name="com.qq.e.comm.DownloadService"
+            android:exported="false" />
+        <activity android:name="com.qq.e.ads.ADActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
+
         <receiver android:name="com.tim.app.receiver.LSReceiver">
             <intent-filter android:priority="2147483647">
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
