--- a/UniversitySport/app/build.gradle
+++ b/UniversitySport/app/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
+
+    lintOptions {
+        checkReleaseBuilds false
+    }
+
     compileSdkVersion 28
-    buildToolsVersion "28.0.0"
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.guangyangyundong.sport"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 20
-        versionName "1.1.1.7cbd45d"
+        versionCode 21
+        versionName "1.1.1"
         manifestPlaceholders = [YOUR_APP_KEY: "57c68fab67e58ecacf002627"]
         multiDexEnabled true
         ndk { //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
@@ -41,8 +46,8 @@ android {
             minifyEnabled true
             zipAlignEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.wzu_sports_config
+            proguardFile '/Users/chaiyu/dev/wzu_sports_android/UniversitySport/app/proguard-rules.pro'
         }
         debug {
             signingConfig signingConfigs.wzu_sports_config
@@ -72,13 +77,13 @@ dependencies {
     compile 'joda-time:joda-time:2.9.9'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
-
     compile 'com.android.support:appcompat-v7:28.0.0'
     compile 'com.android.support:design:28.0.0'
     compile 'com.android.support:support-v4:28.0.0'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.3.1'
     compile 'com.gavin.com.library:stickyDecoration:1.2.0'
-    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
 }
 
 def releaseTime() {
