--- a/UniversitySport/BaseLibrary/build.gradle
+++ b/UniversitySport/BaseLibrary/build.gradle
@@ -19,20 +19,20 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-//    compile 'com.android.support:appcompat-v7:25.2.0'
-//    compile 'com.android.support:design:25.2.0'
-//    compile 'com.android.support:recyclerview-v7:25.2.0'
-//    compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
-    compile 'com.android.support:cardview-v7:25.0.0'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.lzy.net:okhttputils:1.8.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.karumi:dexter:2.2.2'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+//    api 'com.android.support:appcompat-v7:25.2.0'
+//    api 'com.android.support:design:25.2.0'
+//    api 'com.android.support:recyclerview-v7:25.2.0'
+//    api 'com.android.support:support-v4:25.2.0'
+    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'com.android.support:design:28.0.0'
+    api 'com.android.support:recyclerview-v7:28.0.0'
+    api 'com.android.support:cardview-v7:28.0.0'
+    api 'com.android.support:multidex:1.0.1'
+    api 'com.google.code.gson:gson:2.7'
+    api 'com.lzy.net:okhttputils:1.8.0'
+    api 'com.squareup.okhttp:okhttp:2.4.0'
+    api 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    api 'com.karumi:dexter:2.2.2'
 }
