--- a/UniversitySport/app/build.gradle
+++ b/UniversitySport/app/build.gradle
@@ -47,7 +47,7 @@ android {
             zipAlignEnabled true
             shrinkResources true
             signingConfig signingConfigs.wzu_sports_config
-            proguardFile '/Users/chaiyu/dev/wzu_sports_android/UniversitySport/app/proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             signingConfig signingConfigs.wzu_sports_config
@@ -68,21 +68,21 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':BaseLibrary')
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':BaseLibrary')
+    testImplementation 'junit:junit:4.12'
     //    compile 'com.amap.api:map3d-native:latest.integration'
-    compile 'com.amap.api:3dmap:5.4.0'
-    compile 'com.amap.api:location:3.6.0'
-    compile 'joda-time:joda-time:2.9.9'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
+    implementation'com.amap.api:3dmap:5.4.0'
+    implementation'com.amap.api:location:3.6.0'
+    implementation'joda-time:joda-time:2.9.9'
+    implementation'com.github.bumptech.glide:glide:4.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.android.support:design:28.0.0'
-    compile 'com.android.support:support-v4:28.0.0'
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.3.1'
-    compile 'com.gavin.com.library:stickyDecoration:1.2.0'
-    compile 'com.tencent.bugly:crashreport:latest.release'
+    implementation'com.android.support:appcompat-v7:28.0.0'
+    implementation'com.android.support:design:28.0.0'
+    implementation'com.android.support:support-v4:28.0.0'
+    implementation'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.3.1'
+    implementation'com.gavin.com.library:stickyDecoration:1.2.0'
+    implementation'com.tencent.bugly:crashreport:latest.release'
     //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
 }
 
